--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,35 +23,48 @@
     <header>
         <h1> My To Do List</h1>
 
-    <form method="POST" action="/postItem">
-        <input class="text-input" type="text" name="todoItem" autocomplete="off" autofocus="on" required><br>
-        <input class="submit-button" type="submit" value="">
-    </form>
-</header>
+    </header>
     <section>
-    <ul>
-        <% for (let i = 0; i < info.length; i++){ %>
-            <%if (info[i].deleted == false){ %> 
-                <%if (info[i].completed == false){%>
-                    <li class="item"> 
-                        <i class="fa-regular fa-square not-checked"></i>
-                        <form action="/updateName" method="POST">
-                            <input class = "text-input uncompleted" type="text" value="<%=info[i].todoItem%>" name="probando">
-                        </form>
-                        <i class="fa-solid fa-trash"></i>
-                    </li>
-                <% } else{%> <!--If end--> 
-                    <li class="item"> 
-                        <i class="fa-regular fa-square-check checked"></i>
-                        <input class = "text-input completed" type="text" value="<%=info[i].todoItem%>">
-                        <i class="fa-solid fa-trash"></i>
-                    </li>
-                <%}%> <!--Else end-->
+        <ul>
+            <% for (let i = 0; i < info.length; i++){ %>
+                <%if (info[i].deleted == false){ %> 
+                    <%if (info[i].completed == false){%>
+                        <li class="item"> 
+                            <i class="fa-regular fa-square not-checked"></i>
+                            <i class="fa-solid fa-arrows-rotate"></i>
+                            <i class="fa-solid fa-greater-than"></i>
+                            <input class = "text-input uncompleted" type="text" value="<%=info[i].todoItem%>" data-id="<%=info[i]._id%>">
+                            <!-- <textarea class = "text-input uncompleted" type="text" data-id="<%=info[i]._id%>"oninput="auto_grow(this)"><%=info[i].todoItem%></textarea> -->
+                            
+                            <i class="fa-solid fa-trash"></i>
+                            
+                            
+                        </li>
+                    <% } else{ //If end%> 
+                        <li class="item"> 
+                            <i class="fa-regular fa-square-check checked"></i>
+                            <i class="fa-solid fa-arrows-rotate"></i>
+                            <i class="fa-solid fa-greater-than"></i>
+                            <input class="text-input completed" type="text" value="<%=info[i].todoItem%>" data-id="<%=info[i]._id%>">
+                            <!-- <textarea class="text-input completed" type="text" data-id="<%=info[i]._id%>"><%=info[i].todoItem%></textarea> -->
+                            
+                            <i class="fa-solid fa-trash"></i>
+                            
+                            
+                        </li>
+                    <%} // Else end%>
 
-            <% } %> <!--If end-->
-        <% } %> <!--For loop end-->
-    </ul>
+                <% } // If end%>
+            <% } // For loop end%>
+        </ul>
+        <section>
+        <form method="POST" action="/postItem">
+            <input class="submit-button" type="submit" value="+">
+            <input class="text-input" type="text" name="todoItem" autocomplete="off" autofocus="on" required><br>
+        </form>
+        </section>
     </section>
+    
     <script src="/js/main.js"></script>
 </body>
 </html>
