--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,45 +20,8 @@
 </head>
 
 <body>
-    <header>
-        <h1> My To Do List</h1>
-
-    </header>
-    <section>
-        <ul>
-            <% for (let i = 0; i < info.length; i++){ %>
-                <%if (info[i].deleted == false){ %> 
-
-                        <li class="item"> 
-                            <i class="fa-regular <%=info[i].completed == false ? 'fa-square not-checked' : 'fa-square-check checked'%>"></i>
-                            <i class="fa-solid fa-arrows-rotate task-update"></i>
-                            <i class="fa-solid fa-circle-chevron-down"></i>
-                            <input class = "text-input <%=info[i].completed == false ? 'uncompleted':'completed'%>" type="text" value="<%=info[i].todoItem%>" data-id="<%=info[i]._id%>">
-                            <i class="fa-solid fa-trash"></i>
-                            <ul class="subtasks">
-                                <% info[i].subtasks.forEach(subtask => { %>
-                                    <li class="subtask" style="padding-left:60px;">
-                                        <i class="fa-regular <%=info[i].completedSubtasks.includes(subtask) ? 'fa-square-check subtask-square subtask-checked' : 'fa-square subtask-square subtask-not-checked'%>"></i>
-                                        <i class="fa-solid fa-arrows-rotate st-update"></i>
-                                        <input class = "subtask text-input <%=info[i].completedSubtasks.includes(subtask) ? 'completed' : 'uncompleted'%>" value="<%=subtask%>" autocomplete="off">
-                                        <i class="fa-solid fa-xmark"></i>
-                                    </li>
-                                <%})%>
-                            </ul>
-                            
-                        </li>
-
-                <% } // If deleted end%>
-            <% } // For loop end%>
-        </ul>
-        <section>
-        <form method="POST" action="/postItem">
-            <input class="submit-button" type="submit" value="+">
-            <input class="text-input" type="text" name="todoItem" autocomplete="off" required><br>
-        </form>
-        </section>
-    </section>
-    
+    <h1>hola hola que tal</h1>
+    <a href="/todos/">Todos</a>
     <script src="/js/main.js"></script>
 </body>
 </html>
