Added authentication with passport

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,6 +22,8 @@
 <body>
     <h1>hola hola que tal</h1>
     <a href="/todos/">Todos</a>
+    <a href="/login/">Log In</a>
+    <a href="/signup/">Sign Up</a>
     <script src="/js/main.js"></script>
 </body>
 </html>
