--- a/views/todos.ejs
+++ b/views/todos.ejs
@@ -19,6 +19,10 @@
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 
+<header>
+    <a href="/logout/">Log Out</a>
+</header>
+
 <body>
     <header>
         <h1> My To Do List</h1>
