Edited site description

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -69,8 +69,8 @@
       <!-- Text -->
       <div class="flex flex-col justify-center p-6 lg:p-0 text-center rounded-sm lg:max-w-md xl:max-w-lg lg:text-right">
         <h1 class="text-5xl font-bold leading-none sm:text-4xl lg:pl-12 text-[#191700]">Focus on what <span class="text-blue-300"> really </span>matters</h1>
-        <p class="mt-6 mb-8 text-lg sm:mb-12 text-[#a8a8a1]">Sync with ANKI, Spotify and Pomodoro to create               
-          <br class="hidden md:inline lg:hidden">your study spaces and clear your mind                     
+        <p class="mt-6 mb-8 text-lg sm:mb-12 text-[#a8a8a1]">Sync with Spotify to create              
+          <br class="hidden md:inline lg:hidden"><br>your study spaces and clear your mind                     
         </p>
         <!-- Sign Up Button -->
         <div class="flex flex-col space-y-4 sm:items-center sm:justify-center sm:flex-row sm:space-y-0 sm:space-x-4 lg:justify-end">
